--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ header ul li a {
 
 main {
   padding: 20px;
+  min-height: calc(100vh - 100px); /* フッターを除いた高さを確保 */
+  box-sizing: border-box;
 }
 
 footer {
@@ -38,9 +40,7 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px 0;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  margin-top: 20px;
 }
 
 .card {
